--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -45,3 +45,10 @@
 font-family = "Geist Mono NF"
 
 theme = catppuccin-macchiato.conf
+
+background-opacity = .95
+background-blur = true
+
+window-padding-x = 12
+window-padding-y = 12
+window-padding-balance = true
